--- a/main.css
+++ b/main.css
@@ -10,6 +10,9 @@ body {
     font-size: 1.125rem;
     /* background-color: black; */
 }
+div.navbar, div.navbar > *{
+    display: flex;
+}
 
 /* Navigation Bar  */
 .hamburgermenu {
@@ -23,7 +26,6 @@ body {
     justify-content:space-around;
     height: 70px;
     align-items: center;
-    /* flex-wrap: wrap; */
     background-color:hsl(0, 0%, 100%);
 }
 
@@ -59,7 +61,6 @@ button > a {
     height: 5px;
     background-image: linear-gradient(to right,hsl(136, 65%, 51%), hsl(192, 70%, 51%));
     top: 85%;    
-    transition: opacity ease-in-out 2s;
     
 }
 
@@ -84,20 +85,35 @@ button > a {
       
     }
     .navbar {
-        flex-direction: column;
-        overflow: hidden;
-        /* justify-content: left; */
-        padding: 0 20px;
-        text-decoration: none;
+        /* flex-direction: column; */
+        /* overflow: hidden; */
+        /* text-decoration: none; */
         font-size: 17px;
-        /* display: block; */
+        /* height: auto; */
     }
     #navbtn {
-        /* display: none; */
         flex-direction: column;
+        position: absolute;
+        /* padding: 15px 0; */
         height: auto;
+        top: 100px;
+        width: 90%;
+        background-color: white;
+        border-radius: 10px;
     }
     .nav {
+        
+        width: 100%;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 15px 0;
+        
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* align-self:center; */
+        /* margin: 5px 20px 0 20px; */
         /* height: 15px; */
         /* align-self:center; */
     }
@@ -105,11 +121,26 @@ button > a {
         position:absolute;
         bottom: 10px;
     }
-    .logoimg {
-        /* align-self: space-between; */
-        
-        /* justify-self: Space-between; */
+    #logoimg {        
+        display: flex;
+        color: black;
+        background-color:yellowgreen;
+        justify-content:space-between;
+        /* padding: 0 25px; */
+        /* align-self: center; */
+        width: 100%;
+        /* height: 60px; */
     }
+    .fa-bars {
+        color: blanchedalmond;
+        /* height: 20px; */
+        /* width: 50px; */
+
+    }
+    /* #he {
+        height: auto;
+        width: auto;
+    } */
     /* .hamburgermenu {
         display: block;
     } */
