--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
     margin: 0;
     /* border: 1px solid black; */
     font-family: 'Public Sans', sans-serif;
+    /* overflow-x: hidden; */
     
 }
 body {
@@ -73,7 +74,96 @@ button > a {
     /* font-size: 0.875rem; */
 }
 
+
+
+
+
+
+
 /* Section 1 */
+.section1 {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    justify-content: flex-end;
+    align-items: flex-end;
+    
+}
+
+.s1div {
+    height: 40vw;
+    background-color: hsl(0, 0%, 98%);
+}
+#div1 {
+    /* width: 40%; */
+    flex:2;
+    padding: 0 0 0 7%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    align-content: center;
+
+}
+#div2 {
+    flex:3;
+    background-image: url("./images/bg-intro-desktop.svg");
+    width: 50%;
+    /* height: auto; */
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: 160%;
+    background-position: 0 -20vw;
+}
+
+nav {
+    position: relative;
+    z-index: 3;
+}
+#backimg {
+    width: 100%;
+    height: auto;
+    top:-135px;
+    right: -10vw;
+    background-position: left;
+    overflow-x: hidden;
+    position: relative;
+}
+#reqbutton2 {
+    position: relative;
+}
+h1 {
+    padding-bottom: 40px; 
+    font-size: 2.7rem; 
+    font-weight: 500;
+}
+p {
+    line-height: 25px; 
+    padding-bottom:30px; 
+    color: hsl(233, 8%, 62%);
+}
+
+@media only screen and (max-width: 1070px){
+    h1 {
+        font-size: 2rem;
+        padding-bottom: 20px;
+    }
+    p {
+        font-size: 1rem;
+        line-height: 18px;
+        padding-bottom: 15px;
+    }
+    .requestbtn input[type="button"] {
+        height: 30px;
+        width: 100px;
+        font-size: 0.7rem;
+    }
+    a {
+        font-size: 0.9rem;
+    }
+
+}
+
 @media only screen and (max-width: 604px) {
     body {
       /* background-color: lightblue; */
@@ -90,8 +180,8 @@ button > a {
     #navbtn {
         display: none;
         flex-direction: column;
+        /* z-index: -444; */
         position: absolute;
-        /* padding: 15px 0; */
         height: auto;
         top: 100px;
         width: 90%;
@@ -122,9 +212,57 @@ button > a {
     #icon {
         display: flex;
     }
+    .section1 {
+        flex-direction: column-reverse;
+        /* height: 800px; */
+    }
+    #div1 {
+        top: 0;
+        /* flex:1; */
+        width: 100%;
+        height: 100%;
+        padding: 0;
+    }
+    #div2 {
+        display: flex;
+        /* flex:1; */
+        /* position:static; */
+        background-image: url("./images/bg-intro-mobile.svg");
+        width: 100%;
+        height: auto;
+        /* height: 30%; */
+        background-size: cover;
+    }
+    #backimg {
+        width: 100%;
+        /* height: 30%; */
+        padding: 0 20px;
+        /* height: auto; */
+        /* top:-30px; */
+        right:0;
 
-    .fa-bars {
-        color: blanchedalmond;
+
+        /* background-position: center; */
+    }
+    p {
+        text-align: center;
+        padding-bottom: 20px;
+        line-height: 25px;
+        padding: 0 30px;
+    }
+    h1 {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+    #reqbutton2 {
+        padding-top: 30px;
+        text-align: center;
+        /* size:200px; */
+    }
+    .requestbtn input[type="button"] {
+        height: 38px;
+        width: 150px;
+        font-size: 0.9rem;
     }
     /* remove the line effect from menu */
     .nav:hover::after{
