--- a/main.css
+++ b/main.css
@@ -87,12 +87,13 @@ button > a {
     /* justify-content: space-between; */
     justify-content: flex-end;
     align-items: flex-end;
+    background-color: #fafafa;
     
 }
 
 .s1div {
     height: 40vw;
-    background-color: hsl(0, 0%, 98%);
+    /* background-color: hsl(0, 0%, 98%); */
 }
 #div1 {
     /* width: 40%; */
@@ -101,8 +102,8 @@ button > a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
-    align-content: center;
+    /* align-self: center; */
+    /* align-content: center; */
 
 }
 #div2 {
@@ -132,14 +133,71 @@ nav {
 #reqbutton2 {
     position: relative;
 }
+
+
+/* section 2 */
+.section2 {
+    display: flex;
+    flex-direction: column;
+    padding: 7vw;
+    height: auto;
+    background-color:  #f4f5f7;
+    /* width: 100%; */
+}
+#s2div1 {
+    padding-right:35vw;
+}
+#s2div2 {
+    display: flex;
+    flex-direction: row;
+}
+.s2img {
+    padding: 30px 0;
+}
+
+
+/* Section 3 */
+
+#s3div2 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 25px;
+}
+
+.articlediv {
+    /* display: flex; */
+    width: 30%;
+    background-color: white;
+    border-radius: 10px;
+    /* row-gap: 50px; */
+}
+.articlediv img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    /* display: cover; */
+}
+
 h1 {
     padding-bottom: 40px; 
     font-size: 2.7rem; 
     font-weight: 500;
 }
+h2 {
+    padding-bottom: 30px;
+    font-size: 2.1rem;
+    font-weight: 500;
+}
+h3 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding-bottom: 25px;
+}
 p {
     line-height: 25px; 
     padding-bottom:30px; 
+    padding-right: 5px;
     color: hsl(233, 8%, 62%);
 }
 
@@ -147,6 +205,12 @@ p {
     h1 {
         font-size: 2rem;
         padding-bottom: 20px;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1rem;
     }
     p {
         font-size: 1rem;
@@ -161,10 +225,15 @@ p {
     a {
         font-size: 0.9rem;
     }
+    .s2img img {
+        width: 50px;
+        height: auto;
+    }
+    
 
 }
 
-@media only screen and (max-width: 604px) {
+@media only screen and (max-width: 655px) {
     body {
       /* background-color: lightblue; */
       
@@ -244,6 +313,27 @@ p {
 
         /* background-position: center; */
     }
+
+
+    /* section 2 */
+    #s2div1 {
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+    }
+
+    #s2div2 {
+        flex-direction: column;
+        /* justify-content: center; */
+    }
+    .s2img {
+        text-align: center;
+        padding: 10px 0;
+    }
+    .s2img img {
+        width: 25%;
+        height: 25%;
+    }
     p {
         text-align: center;
         padding-bottom: 20px;
@@ -253,6 +343,13 @@ p {
     h1 {
         text-align: center;
         padding-bottom: 20px;
+    }
+    h2 {
+        text-align: center;
+    }
+    h3 {
+        text-align: center;
+        font-size: 1.2rem;
     }
     #reqbutton2 {
         padding-top: 30px;
