--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 * {
     padding: 0;
     margin: 0;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     font-family: 'Public Sans', sans-serif;
     /* overflow-x: hidden; */
     
@@ -157,7 +157,9 @@ nav {
 
 
 /* Section 3 */
-
+.section3 {
+    background-color: #fafafa;
+}
 #s3div2 {
     display: flex;
     flex-direction: row;
@@ -171,12 +173,30 @@ nav {
     border-radius: 10px;
     /* row-gap: 50px; */
 }
+.articlediv p,.articlediv h3 {
+    padding: 10px 20px;
+}
 .articlediv img {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
     /* display: cover; */
+}
+
+
+/* footer */
+.footer {
+    background-color: hsl(233, 26%, 24%);
+    display: flex;
+    flex-direction: row;
+}
+a {
+    text-decoration: none;
+    color: #fafafa;
+}
+.footerlogo img {
+    color: white;
 }
 
 h1 {
@@ -268,8 +288,9 @@ p {
         padding: 15px 0;
     }
     .requestbtn {
-        position:absolute;
-        bottom: 10px;
+        /* position:absolute; */
+        display: none;
+        /* bottom: 40px; */
     }
     #logoimg {        
         display: flex;
@@ -333,6 +354,22 @@ p {
     .s2img img {
         width: 25%;
         height: 25%;
+    }
+
+    /* section 2 */
+    #s3div2  {
+        flex-direction: column;
+        width: 100%;
+        row-gap: 30px;
+        /* justify-content: left; */
+        /* text-align: left; */
+        /* text-align: center; */
+    }
+    .articlediv {
+        width: 100%;
+    }
+    .articlediv p,.articlediv h3 {
+        text-align: left;
     }
     p {
         text-align: center;
